Project Simplebank {
  database_type: 'PostgreSQL'
  Note: '''
    # SimpleBank Database
  '''
}

Table "users"as U {
   username varchar [pk]
   hashed_password varchar [not null]
   full_name varchar [not null]
   email varchar [unique, not null]
   password_changed_at timestampz [not null, default: `0001-01-01 00:00:00Z`]
   created_at timestampz [not null, default: `now`]
}


Table "account" {
  "id" bigserial [pk, increment]
  "owner" varchar [ref: > U.username, not null]
  "balance" bigint [not null]
  "currency" varchar [not null]
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    owner
    (owner,currency) [unique]
  }
}

Table "entries" {
  "id" bigserial [pk, increment]
  "account_id" bigint [not null]
  "amount" bigint [not null]
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    account_id
  }
}

Table "transfers" {
  "id" bigserial [pk, increment]
  "from_account_id" bigint [not null]
  "to_account_id" bigint [not null]
  "amount" bigint [not null]
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Ref:"account"."id" < "entries"."account_id"

Ref:"account"."id" < "transfers"."from_account_id"

Ref:"account"."id" < "transfers"."to_account_id"
